fix alignment, maybe of video-play button
Ignore-this: b9e9971c1ed4c5603e2b74841a343106

darcs-hash:e7870cb3c1dd62700748f307b604e0cdc2c32a60

--- a/static/styles.css
+++ b/static/styles.css
@@ -21,8 +21,8 @@ h2 {
     height: 56px;
     left: 3px;
     position: absolute;
-    top: -17px;
-    width: 74px;
+    top: -20px;
+    right: 6px;
 }
 a {
     color: #ccf;
